tests/baselines/reference/parserErrorRecovery_ExtendsOrImplementsClause3.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ExtendsOrImplementsClauses/parserErrorRecovery_ExtendsOrImplementsClause3.ts (4 errors) ====
    class C extends implements A {
                               ~
!!! error TS1005: '{' expected.
                                 ~
!!! error TS1005: ';' expected.
                    ~~~~~~~~~~
!!! error TS2304: Cannot find name 'implements'.
                               ~
!!! error TS2304: Cannot find name 'A'.
    }